[package]
name = "bast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.16.1", features = ["full"] }
tokio-util = { version="0.7.0", features = ["codec"] }
bytes = { version="1.1.0" }
futures = { version="0.3.21" }
memchr = { version="2.4.1" }
enum-as-inner = { version="0.4.0" }
dashmap = { version="5.1.0" }